# edge-vision-ai-demo-kit

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  MAINTENANCE.md  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: architecture.md  openai-oss-application.md  porting-accelerator-backend.md  roadmap.md  sanitization-policy.md
docs/superpowers/plans/: 2026-06-01-edge-vision-ai-demo-kit.md
examples/env/: edge-vision-demo.env
examples/qt-vision-viewer/: CMakeLists.txt  README.md  qt-vision-viewer.pro
examples/qt-vision-viewer/cmake/: board-linux-toolchain.example.cmake
examples/qt-vision-viewer/config/: board-system.example.json  board.env.example  runtime.example.json
examples/qt-vision-viewer/data/: detections.example.json
examples/qt-vision-viewer/docs/: board-system-profile.md  local-build-verification.md
examples/qt-vision-viewer/scripts/: build-board-example.sh
examples/qt-vision-viewer/src/: display_router.cpp  display_router.h  ffmpeg_stream_source.cpp  ffmpeg_stream_source.h  frame_source.h  main.cpp  main_window.cpp  main_window.h  synthetic_frame_source.cpp  synthetic_frame_source.h  v4l2_camera_source.cpp  v4l2_camera_source.h  vision_canvas.cpp  vision_canvas.h
examples/systemd/: edge-vision-demo.service
models/: manifest.example.json
scripts/: check_sanitization.py
src/edge_vision_ai_demo_kit/: __init__.py  backends.py  cli.py  manifest.py  pipeline.py  sanitize.py
tests/: test_manifest.py  test_pipeline.py  test_qt_example.py  test_repository_health.py  test_sanitize.py
