cmake_minimum_required(VERSION 3.16)

project(qt_vision_viewer LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(Qt6 REQUIRED COMPONENTS Widgets)

add_executable(qt-vision-viewer
    src/main.cpp
)

target_link_libraries(qt-vision-viewer PRIVATE Qt6::Widgets)
